@@ -218,6 +218,10 @@
 					<label for="showlowestprice" id="store_lowestprice_text">Show</label>
 					<a href="http://enhancedsteam.com/featuredetail.php?id=5" class="help"></a>
 				</li>
+				<li>
+					<input type="checkbox" id="showlowestpricecoupon">
+					<label for="showlowestpricecoupon" id="store_lowestprice_coupon_text">Include coupon codes in price comparison</label>
+				</li>
 				<li><input type="checkbox" id="stores_all"><label for="stores_all" id="lowestprice_stores_all_text">Compare all stores</label></li>
 				<table id="store_stores" style="display: none" border=0>
 					<tr>
